--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 aoc = { "path" = "aoc" }
 glam = "0.22.0"
 itertools = "0.10.5"
+nom = "7.1.1"
 
 [profile.release]
 # Enable debug information in release builds.
